--- a/backend/config/uat.env
+++ b/backend/config/uat.env
@@ -3,6 +3,6 @@ mongoURI=mongodb://127.0.0.1:27017/storefleet
 JWT_Secret=storefleetbyvivek
 JWT_Expire=1d
 COOKIE_EXPIRES_IN=1
-STORFLEET_SMPT_MAIL=ssshreya2000@gmail.com
-STORFLEET_SMPT_MAIL_PASSWORD=ezwiolhsidmcehby
+STORFLEET_SMPT_MAIL=
+STORFLEET_SMPT_MAIL_PASSWORD=
 SMPT_SERVICE=gmail
